# new_chapter

./: .gitignore  3pc.json  README.md  Untitled.ipynb  benchmark.py  benchmarkV2.py  benchmark_ch2.py  benchmark_mbf.py  figuring_it_out.ipynb  main.py  mobilefacenet.py  models.py  pyproject.toml  resnet.py  server.py  settings.json  simple_cnn.py  visual.ipynb
results/: cnn_full_stats_s500_fm64.json  cnn_mlp_small.json  cnn_new.json  cnn_new_15M.json  cnn_new_only_25M.json  cnn_only_25M_50l.json  cnn_paper.json  cnn_paper_d10.json  cnn_paper_d20.json  cnn_paper_l1.json  cnn_paper_l25.json  cnn_paper_l5.json  cnn_plain.json  cnn_stats_s10.json  large_non_lstm.json  lin_full_stats_s1000_fm32.json  lin_full_stats_s1000_fm64.json  lstm-bigger.json  lstm.json  lstm_new.json  lstm_s250.json  lstm_s700.json  mbf.json  medium_non_lstm.json  mlp_fhe_full_stats_s1000_fm128.json  mlp_fhe_full_stats_s1000_fm32.json  mlp_fhe_full_stats_s1000_fm64.json  mlp_full_stats_s1000_fm32.json  mlp_full_stats_s1000_fm64.json  mlp_new.json  mlp_new_500k.json  mlp_paper.json  mlp_paper_d10.json  mlp_paper_d20.json  mlp_s2000.json  mlp_s700.json  mlp_stats_s10.json  mlp_test.json  small.json  xxl_non_lstm.json
